fixed gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -357,7 +357,7 @@ fill: #F4F4FD;
 }
 
 .portfolio-item:hover .payment-cover-text {
-transform: translateY(0);
+ transform: translateY(0);
 }
 
 .payment-cover-text {
@@ -369,6 +369,7 @@ transform: translateY(0);
   top: 0;
   background-color: #4D5AE5;
   height: 100%;
+  padding: 40px 32px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(100%);
 }
@@ -387,7 +388,6 @@ transform: translateY(0);
 .container-footer {
   display: flex;
   align-items: baseline;
-  gap: 16px;
 }
 
 .footer-logo {
@@ -412,6 +412,10 @@ transform: translateY(0);
 color: #FFFFFF;
 font-weight: 500;
 margin-bottom: 16px;
+}
+
+.footer .icon-list{
+  gap: 16px;
 }
 
 .footer .icon-link:hover, .footer .icon-link:focus {
